Use nfdiv-common-lib getAosCaseData (#17)